--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "dotenv": "^16.0.3",
     "ethereumjs-tx": "^2.1.2",
     "ethers": "5.7",
+    "i18next": "^23.2.8",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-redux": "^8.0.5",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
